--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,4 +11,31 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1"
+        android:gravity="center|bottom"
+        android:orientation="vertical"
+        android:weightSum="1">
+
+        <TextView
+            android:id="@+id/player"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Player vs Player"/>
+        <Button
+            android:id="@+id/buttonNewGame"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="New Game"
+            android:onClick="newClicked"/>
+        <Button
+            android:id="@+id/buttonExitGame"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Exit Game"
+            android:onClick="exitClicked"/>
+    </LinearLayout>
+
 </LinearLayout>
