change both layouts to relative so I can position stuff on top of eachother and overlap stuff

--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -18,8 +18,9 @@
         android:id="@+id/buttonExit"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/buttonTwoPlayer"
         android:text="Exit Game"
         android:onClick="exitClicked"/>
 
 
-</LinearLayout>
+</RelativeLayout>
