passing computer or player logic all the way through now

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/buttonNewGame"
         android:text="Exit Game"
-        android:onClick="exitClicked"/>
+        android:onClick="exitCurrentClicked"/>
 
 </RelativeLayout>
